fix image display on Safari

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,22 +36,19 @@ header {
   @include flex(row, space-around);
 
   // "Profile picture" on the left hand size of the header
-  > .picture {
-    @include flex(column, space-around);
+  img {
     width: 30%;
 
-    img {
-      // Show the image in a circular frame
-      border-radius: 50%;
-      border-style: solid;
-      border-width: 3px;
-    }
+    // Show the image in a circular frame
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 3px;
   }
 
   // Greeting message "Hey, ..."
   > .greeting {
-    @include flex(column, center);
     width: 60%;
+    @include flex(column, center);
 
     p {
       font: bold min(12vw, 7em) "Aladin";
